prevent horizontal scrolling

--- a/layouts/Wrapper.module.scss
+++ b/layouts/Wrapper.module.scss
@@ -2,11 +2,6 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow-x: hidden;
-    overscroll-behavior: none;
+    overflow: hidden;
     transition: all 1000ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
